--- a/jumper/gameOver.html
+++ b/jumper/gameOver.html
@@ -19,7 +19,7 @@
             <img id="deathImage" src="img/death.png" alt="death Stickman image"/>
             <br />
             <br />
-            <form action="index.html" class="center">
+            <form action="../index.html" class="center">
                 <button type="submit" id="submit" value="Start game" autofocus>Start new game</button>
             </form>
         </main>
