--- a/jumper/gameWon.html
+++ b/jumper/gameWon.html
@@ -22,7 +22,7 @@
             <img id="winImage" src="img/wall3.jpg" alt="happy winning Stickman"/>
             <br />
             <br />
-            <form action="index.html" class="center">
+            <form action="../index.html" class="center">
                 <h2 id="nickname">Stickman:&ensp;</h2>
                 <h2 id="score">Your score:&ensp;</h2>
 
