--- a/jumper/game.html
+++ b/jumper/game.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<script language = "JavaScript">
-    function preloader()
-    {
-        window.setTimeout(1000)
+<script language="JavaScript">
+    function preloader() {
+        // Black character
+        let runRightImage = document.createElement("img");
+        runRightImage.src = "./img/spriteRunRight.png/";
+        let runLefttImage = document.createElement("img");
+        runLefttImage.src = "./img/spriteRunLeft.png/";
+        let standImage = document.createElement("img");
+        standImage.src = "./img/stand.png/";
+        // Blue character
+        const runRightBlueImage = document.createElement("img");
+        runRightBlueImage.src = "./img/spriteRunRightBlue.png/";
+        const runLeftBlueImage = document.createElement("img");
+        runLeftBlueImage.src = "./img/spriteRunLeftBlue.png/";
+        const standBlueImage = document.createElement("img");
+        standBlueImage.src = "./img/standBlue.png/";
+        // Red character
+        const runRightRedImage = document.createElement("img");
+        runRightRedImage.src = "./img/spriteRunRightRed.png/";
+        const runLeftRedImage = document.createElement("img");
+        runLeftRedImage.src = "./img/spriteRunLeftRed.png/";
+        const standRedImage = document.createElement("img");
+        standRedImage.src = "./img/standRed.png/";
+        // Green character
+        const runRightGreenImage = document.createElement("img");
+        runRightGreenImage.src = "./img/spriteRunRightGreen.png/";
+        const runLefttGreenImage = document.createElement("img");
+        runLefttGreenImage.src = "./img/spriteRunLeftGreen.png/";
+        const standGreenImage = document.createElement("img");
+        standGreenImage.src = "./img/standGreen.png/";
+        // After hit pictures
+        let standImagePain = document.createElement("img");
+        standImagePain.src = "./img/standPain1.png/";
+        const standBlueImagePain = document.createElement("img");
+        standBlueImagePain.src = "./img/standPain3.png/";
+        const standRedImagePain = document.createElement("img");
+        standRedImagePain.src = "./img/standPain2.png/";
+        const standGreenImagePain = document.createElement("img");
+        standGreenImagePain.src = "./img/standPain4.png/";
+
+        const backgroundImage = document.createElement("img");
+        backgroundImage.src = "./img/back.png/";
+        const hillImage = document.createElement("img");
+        hillImage.src = "./img/hills.png/";
+        const goalImage = document.createElement("img");
+        goalImage.src = "./img/goal.png/";
+
+        let shotImage = document.createElement("img");
+        shotImage.src = "./img/shot.png/";
+        const shotImageRed = document.createElement("img");
+        shotImageRed.src = "./img/shot4.png/";
+        const shotImageBlue = document.createElement("img");
+        shotImageBlue.src = "./img/shot3.png/";
+        const shotImageGreen = document.createElement("img");
+        shotImageGreen.src = "./img/shot2.png/";
+
     }
 
 </script>
@@ -19,7 +71,7 @@
 
 <body onLoad="javascript:preloader()">
 <audio autoplay="autoplay">
-    <source src="music/themeMusic.mp3" />
+    <source src="music/themeMusic.mp3"/>
 </audio>
 
 <canvas>
