--- a/jumper/game.html
+++ b/jumper/game.html
@@ -1,67 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
 <head>
-    <script>
-        function preloader() {
-            // Black character
-            let runRightImage = document.createElement("img");
-            runRightImage.src = "./img/spriteRunRight.png/";
-            let runLefttImage = document.createElement("img");
-            runLefttImage.src = "./img/spriteRunLeft.png/";
-            let standImage = document.createElement("img");
-            standImage.src = "./img/stand.png/";
-            // Blue character
-            const runRightBlueImage = document.createElement("img");
-            runRightBlueImage.src = "./img/spriteRunRightBlue.png/";
-            const runLeftBlueImage = document.createElement("img");
-            runLeftBlueImage.src = "./img/spriteRunLeftBlue.png/";
-            const standBlueImage = document.createElement("img");
-            standBlueImage.src = "./img/standBlue.png/";
-            // Red character
-            const runRightRedImage = document.createElement("img");
-            runRightRedImage.src = "./img/spriteRunRightRed.png/";
-            const runLeftRedImage = document.createElement("img");
-            runLeftRedImage.src = "./img/spriteRunLeftRed.png/";
-            const standRedImage = document.createElement("img");
-            standRedImage.src = "./img/standRed.png/";
-            // Green character
-            const runRightGreenImage = document.createElement("img");
-            runRightGreenImage.src = "./img/spriteRunRightGreen.png/";
-            const runLefttGreenImage = document.createElement("img");
-            runLefttGreenImage.src = "./img/spriteRunLeftGreen.png/";
-            const standGreenImage = document.createElement("img");
-            standGreenImage.src = "./img/standGreen.png/";
-            // After hit pictures
-            let standImagePain = document.createElement("img");
-            standImagePain.src = "./img/standPain1.png/";
-            const standBlueImagePain = document.createElement("img");
-            standBlueImagePain.src = "./img/standPain3.png/";
-            const standRedImagePain = document.createElement("img");
-            standRedImagePain.src = "./img/standPain2.png/";
-            const standGreenImagePain = document.createElement("img");
-            standGreenImagePain.src = "./img/standPain4.png/";
-
-            const backgroundImage = document.createElement("img");
-            backgroundImage.src = "./img/back.png/";
-            const hillImage = document.createElement("img");
-            hillImage.src = "./img/hills.png/";
-            const goalImage = document.createElement("img");
-            goalImage.src = "./img/goal.png/";
-
-            let shotImage = document.createElement("img");
-            shotImage.src = "./img/shot.png/";
-            const shotImageRed = document.createElement("img");
-            shotImageRed.src = "./img/shot4.png/";
-            const shotImageBlue = document.createElement("img");
-            shotImageBlue.src = "./img/shot3.png/";
-            const shotImageGreen = document.createElement("img");
-            shotImageGreen.src = "./img/shot2.png/";
-
-        }
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jumper</title>
@@ -69,13 +9,15 @@
     <link rel="icon" href="img/icon.svg">
 </head>
 
-<body onLoad="javascript:preloader()">
+<body onLoad="preloader()">
 <audio autoplay="autoplay">
     <source src="music/themeMusic.mp3"/>
 </audio>
 
 <canvas>
 </canvas>
+<script src="js/preloader.js" type="module">
+</script>
 <script src="js/Game.js" type="module">
 </script>
 </body>
